:recycle: refactor: refatoração para simplificação de código.